<resources>
    <string name="client_id" translatable="false">817341396604-bn58vk2crhpcs5lvr50gb5frgs0toa2n.apps.googleusercontent.com</string>
    <string name="app_name">Task manager</string>
    <string name="car_task"> Task </string>
    <string name="car_reminders"> Reminders </string>
    <string name="car_settings"> Settings </string>
    <string name="car_profile"> Profile </string>
    <string name="task_name">Name:</string>
    <string name="description_task">Description</string>
    <string name="date_task">Date</string>
    <string name="create_task">Create task</string>
    <string name="create_reminder">Create reminder</string>
    <string name="add_task">Add task</string>
    <string name="add_reminder">Add reminder</string>
    <string name="reminder_name">Name</string>
    <string name="description_reminder">Description</string>
    <string name="editar">Edit task</string>
    <string name="eliminar">Delete task</string>
    <string name="editarReminder">Edit reminder</string>
    <string name="eliminarReminder">Delete reminder</string>


    <string-array name="type_task">
        <item>Prorrogable</item>
        <item>Deseable</item>
        <item>Urgente</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>