<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#F9F6F5"
    tools:context=".AddTask">

    <ImageView

        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="25dp"
        android:layout_gravity="center"
        android:src="@drawable/registro">

    </ImageView>

    <EditText

        android:id="@+id/register_task_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/task_name"
        android:layout_marginBottom="20dp">


    </EditText>

    <EditText

        android:id="@+id/register_description_task"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/description_task"
        android:layout_marginBottom="20dp">

    </EditText>

    <Button

        android:id="@+id/btn_add_task"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/add_task"
        android:textStyle="bold"
        android:layout_marginBottom="30dp">

    </Button>

</LinearLayout>